# streaming-tools

./: .gitignore  CMakeLists.txt  README.md  Vagrantfile
agent/: CMakeLists.txt  agent.cpp  program.cpp
client/: CMakeLists.txt  Credentials.h  GUIProgram.cpp  GUIProgram.h  GuiClient.cpp  GuiClient.h  IClient.h  MainWindow.cpp  MainWindow.h  client.h  program.cpp  receiver.cpp  receiver.h  streamer.cpp  streamer.h
core-lib/: CMakeLists.txt  DataProcessor.cpp  DataProcessor.h  Image.h  MediaPacket.h  PlayableDataProcessor.cpp  PlayableDataProcessor.h
core-lib/audio/: PlaybackAudioProcessor.cpp  PlaybackAudioProcessor.h  RecordAudioProcessor.cpp  RecordAudioProcessor.h
core-lib/codecs/: OPUSDecoderProcessor.cpp  OPUSDecoderProcessor.h  OPUSEncoderProcessor.cpp  OPUSEncoderProcessor.h  VP8DecoderProcessor.cpp  VP8DecoderProcessor.h  VP8EncoderProcessor.cpp  VP8EncoderProcessor.h  vp8.cpp  vp8.h
core-lib/devices/: WebCamera.cpp  WebCamera.h
core-lib/file/: FileReadProcessor.cpp  FileReadProcessor.h  FileReadRawStreamProcessor.h  FileSaveProcessor.cpp  FileSaveProcessor.h  FileSaveRawStreamProcessor.h
core-lib/image/: JPEG2YV12Processor.cpp  JPEG2YV12Processor.h
core-lib/pipeline/: PipelineHelper.cpp  PipelineHelper.h
core-lib/rtp/: FrameUtils.cpp  FrameUtils.h  RTPDefragmenterProcessor.cpp  RTPDefragmenterProcessor.h  RTPFragmenter.cpp  RTPFragmenter.h  RTPFragmenterProcessor.cpp  RTPFragmenterProcessor.h  RTPHelper.cpp  RTPHelper.h  RTPOpusDepayProcessor.cpp  RTPOpusDepayProcessor.h  RTPVp8Depay.cpp  RTPVp8Depay.h  RTPVp8DepayDataProcessor.cpp  RTPVp8DepayDataProcessor.h  RTPVp8DepayProcessor.cpp  RTPVp8DepayProcessor.h  RtpDefs.h
core-lib/utility/: AudioVideoForkDataProcessor.h  DelayDataProcessor.h  ForkDataProcessor.h  QueueDataProcessor.h
core-lib/video/: VideoDisplay.cpp  VideoDisplay.h  VideoDisplayProcessor.cpp  VideoDisplayProcessor.h  WebCameraProcessor.cpp  WebCameraProcessor.h
credentials-lib/: AboutProgramCredentials.h  CMakeLists.txt  Credentials.h  MediaCredentials.h  NetworkCredentials.h
mediaplayer/: CMakeLists.txt  program.cpp
network-lib/: Agent.cpp  Agent.h  CMakeLists.txt  NetPacket.h  Network.h  NetworkUtils.cpp  NetworkUtils.h  ReceiverSession.cpp  ReceiverSession.h  ReceiverSessionProcessor.cpp  ReceiverSessionProcessor.h  Room.cpp  Room.h  StreamerSession.cpp  StreamerSession.h  StreamerSessionProcessor.cpp  StreamerSessionProcessor.h  UDPPacket.h  udp.cpp  udp.h
receiver/: CMakeLists.txt  program.cpp  program.h
stream-sender/: CMakeLists.txt  program.cpp  streamer.cpp
tests/: CMakeLists.txt  TestAgent.cpp  TestAll.cpp  TestAudio.cpp  TestAudioVideo.cpp  TestEncodeDecodeVP8.cpp  TestNetwork.cpp  TestVideo.cpp
tests/test-data/: webcam_output.yuv420p  webcam_output.yv12 (0)  webcam_output.yv12 (1)  webcam_output.yv12 (10)  webcam_output.yv12 (11)  webcam_output.yv12 (12)  webcam_output.yv12 (13)  webcam_output.yv12 (14)  webcam_output.yv12 (15)  webcam_output.yv12 (16)  webcam_output.yv12 (17)  webcam_output.yv12 (18)  webcam_output.yv12 (19)  webcam_output.yv12 (2)  webcam_output.yv12 (20)  webcam_output.yv12 (21)  webcam_output.yv12 (22)  webcam_output.yv12 (23)  webcam_output.yv12 (24)  webcam_output.yv12 (25)  webcam_output.yv12 (26)  webcam_output.yv12 (27)  webcam_output.yv12 (28)  webcam_output.yv12 (29)  webcam_output.yv12 (3)  webcam_output.yv12 (30)  webcam_output.yv12 (31)  webcam_output.yv12 (32)  webcam_output.yv12 (33)  webcam_output.yv12 (34)  webcam_output.yv12 (35)  webcam_output.yv12 (36)  webcam_output.yv12 (37)  webcam_output.yv12 (38)  webcam_output.yv12 (39)  webcam_output.yv12 (4)  webcam_output.yv12 (40)  webcam_output.yv12 (41)  webcam_output.yv12 (42)  webcam_output.yv12 (43)  (+12 more)
utils-lib/: CMakeLists.txt  DateTimeUtils.cpp  DateTimeUtils.h  FileUtils.cpp  FileUtils.h  ImageUtils.cpp  ImageUtils.h  Logger.cpp  Logger.h  ThreadPoolManager.cpp  ThreadPoolManager.h
